--- a/barestv.web/WebContent/login.html
+++ b/barestv.web/WebContent/login.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-sm-6 col-md-4 col-md-offset-2">
 			<h3>
 				Login
 			</h3>
@@ -60,12 +60,12 @@
 					</label>
 					<input class="form-control" id="exampleInputPassword1" type="password">
 				</div>
-				<button type="submit" class="btn btn-default">
+				<button type="submit" class="btn btn-default center-block">
 					Entrar
 				</button>
 			</form>
 		</div>
-		<div class="col-md-6">
+		<div class="col-sm-6 col-md-4">
 			<h3>
 				Registrar
 			</h3>
@@ -98,7 +98,7 @@
 					</label>
 					<input class="form-control" id="exampleInputPassword1" type="password">
 				</div>
-				<button type="submit" class="btn btn-default">
+				<button type="submit" class="btn btn-default center-block">
 					Registrar
 				</button>
 			</form>
