corrección formularios y botones

--- a/barestv.web/WebContent/admin_destacado.html
+++ b/barestv.web/WebContent/admin_destacado.html
@@ -88,7 +88,7 @@
 						<small>Evento 1 (hora), Evento 2 (hora)</small>
 						</blockquote>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-primary">
 							Destacado
 						</button>
@@ -103,7 +103,7 @@
 						<small>Evento 1 (hora), Evento 2 (hora)</small>
 						</blockquote>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-primary">
 							Destacado
 						</button>
