--- a/barestv.web/WebContent/admin_establecimiento.html
+++ b/barestv.web/WebContent/admin_establecimiento.html
@@ -77,12 +77,12 @@
 						<small>Ubicacion</small>
 						</blockquote>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-primary">
 							Modificar
 						</button>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-danger">
 							Eliminar
 						</button>
@@ -97,12 +97,12 @@
 						<small>Ubicacion</small>
 						</blockquote>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-primary">
 							Modificar
 						</button>
 					</td>
-					<td>
+					<td class="boton">
 						<button type="button" class="btn btn-danger">
 							Eliminar
 						</button>
